--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pwd
 script:
   - mkdir binhouse
-  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i "/bin/bash build_on_linux.sh"
+  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i quay.io/pypa/manylinux2010_x86_64 "/bin/bash build_on_linux.sh"
   - ls binhouse
 notifications:
   email:
