--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ install:
   - pwd
 script:
   - mkdir binhouse
-  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i quay.io/pypa/manylinux2010_x86_64 "/bin/bash build_on_linux.sh"
+  - IMAGE=quay.io/pypa/manylinux2010_x86_64
+  # - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE "/bin/bash build_on_linux.sh"
+  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE "pwd"
   - ls binhouse
 notifications:
   email:
