--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ script:
   - mkdir binhouse
   - IMAGE=quay.io/pypa/manylinux2010_x86_64
   # - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE "/bin/bash build_on_linux.sh"
-  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE "pwd; ls"
+  # - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE "pwd; ls"
+  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE /$(basename $(pwd))/build_on_linux.sh
   - ls binhouse
 notifications:
   email:
