--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,20 @@ matrix:
       sudo: required
       services:
         - docker
-install:
-  - pwd
-script:
-  - mkdir binhouse
-  - IMAGE=quay.io/pypa/manylinux2010_x86_64
-  - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE /$(basename $(pwd))/build_on_linux.sh
-  - ls binhouse
+      script:
+        - mkdir binhouse
+        - IMAGE=quay.io/pypa/manylinux2010_x86_64
+        - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE ./build.sh
+        - mv binhouse/hmmsearch binhouse/hmmsearch_manylinux2010_x86_64
+    - os: osx
+      language: shell
+      env:
+        - MACOSX_DEPLOYMENT_TARGET=10.9
+        - ARCHFLAGS="-arch x86_64"
+      script:
+        - mkdir binhouse
+        - python3 -m pip install --upgrade pip setuptools
+        - mv binhouse/hmmsearch binhouse/hmmsearch_macosx_10_9_x86_64
 notifications:
   email:
     recipients:
