--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ matrix:
     - IMAGE=quay.io/pypa/manylinux2010_x86_64
     - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE ./build.sh
     - mv binhouse/hmmsearch binhouse/hmmsearch_manylinux2010_x86_64
+    - mv binhouse/hmmscan binhouse/hmmscan_manylinux2010_x86_64
   - os: osx
     language: c
     compiler: clang
@@ -19,6 +20,7 @@ matrix:
     - mkdir binhouse
     - "./build.sh"
     - mv binhouse/hmmsearch binhouse/hmmsearch_macosx_10_9_x86_64
+    - mv binhouse/hmmscan binhouse/hmmscan_macosx_10_9_x86_64
 notifications:
   email:
     recipients:
