--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
     - docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $IMAGE ./build.sh
     - mv binhouse/hmmsearch binhouse/hmmsearch_manylinux2010_x86_64
     - mv binhouse/hmmscan binhouse/hmmscan_manylinux2010_x86_64
+    - mv binhouse/hmmpress binhouse/hmmpress_manylinux2010_x86_64
   - os: osx
     language: c
     compiler: clang
@@ -21,6 +22,7 @@ matrix:
     - "./build.sh"
     - mv binhouse/hmmsearch binhouse/hmmsearch_macosx_10_9_x86_64
     - mv binhouse/hmmscan binhouse/hmmscan_macosx_10_9_x86_64
+    - mv binhouse/hmmpress binhouse/hmmpress_macosx_10_9_x86_64
 notifications:
   email:
     recipients:
