--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
     - mv binhouse/hmmscan binhouse/hmmscan_manylinux2010_x86_64
     - mv binhouse/hmmpress binhouse/hmmpress_manylinux2010_x86_64
     - mv binhouse/hmmfetch binhouse/hmmfetch_manylinux2010_x86_64
+    - mv binhouse/hmmemit binhouse/hmmemit_manylinux2010_x86_64
   - os: osx
     language: c
     compiler: clang
@@ -25,6 +26,7 @@ matrix:
     - mv binhouse/hmmscan binhouse/hmmscan_macosx_10_9_x86_64
     - mv binhouse/hmmpress binhouse/hmmpress_macosx_10_9_x86_64
     - mv binhouse/hmmfetch binhouse/hmmfetch_macosx_10_9_x86_64
+    - mv binhouse/hmmemit binhouse/hmmemit_macosx_10_9_x86_64
 notifications:
   email:
     recipients:
