--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,12 @@ on: [push]
 
 env:
   LINUX: quay.io/pypa/manylinux2010_x86_64
+  AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
 
 jobs:
-  build:
+  build_on_linux:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
 
     steps:
       - uses: actions/checkout@v2
@@ -25,6 +24,36 @@ jobs:
           mv binhouse/hmmfetch binhouse/hmmfetch_manylinux2010_x86_64
           mv binhouse/hmmemit binhouse/hmmemit_manylinux2010_x86_64
           mv binhouse/phmmer binhouse/phmmer_manylinux2010_x86_64
+
+      - name: Deploy
+        uses: reggionick/s3-deploy@v3
+        with:
+          folder: binhouse
+          bucket: iseq-py
+          bucket-region: eu-west-2
+          delete-removed: false
+
+  build_on_macos:
+    runs-on: macos-latest
+
+    env:
+      MACOSX_DEPLOYMENT_TARGET: 10.9
+      ARCHFLAGS: -arch x86_64
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build and move
+        run: |
+          mkdir binhouse
+          ./build.sh
+          docker run -v $(pwd):/$(basename $(pwd)) -w /$(basename $(pwd)) -i $LINUX ./build.sh
+          mv binhouse/hmmsearch binhouse/hmmsearch_macosx_10_9_x86_64
+          mv binhouse/hmmscan binhouse/hmmscan_macosx_10_9_x86_64
+          mv binhouse/hmmpress binhouse/hmmpress_macosx_10_9_x86_64
+          mv binhouse/hmmfetch binhouse/hmmfetch_macosx_10_9_x86_64
+          mv binhouse/hmmemit binhouse/hmmemit_macosx_10_9_x86_64
+          mv binhouse/phmmer binhouse/phmmer_macosx_10_9_x86_64
 
       - name: Deploy
         uses: reggionick/s3-deploy@v3
